refactor: update JobMatchingService to use Python microservice instead of Amazon Bedrock
- Remove AWS Comprehend and Bedrock dependencies
- Add WebClient integration with Python job matcher service
- Update method signature to accept resume text directly
- Add PythonMatchResponse inner class for response mapping
- Improve error handling and logging for Python service calls